<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_24dp"
        android:contentDescription="@string/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/ic_schedule_24dp"
        android:contentDescription="@string/schedule"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/my_notes"
        android:icon="@drawable/ic_my_notes_24dp"
        android:contentDescription="@string/my_notes"
        android:title="@string/my_notes"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_24dp"
        android:contentDescription="@string/profile"
        android:title="@string/profile"/>
</menu>