<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_register"
    app:cardElevation="10dp">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginField"
            android:hint="@string/login"
            android:inputType="text"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

     <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordField"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullNameField"
            android:hint="@string/fullName"
            android:inputType="text"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthdayField"
            android:hint="@string/birthday"
            android:inputType="date"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneField"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/gray"
            app:met_primaryColor="@color/blue"
            app:met_errorColor="@color/red"
            app:met_singleLineEllipsis="true"
            />

        <Spinner
            android:id="@+id/sp_genderField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:checked="false"
            android:spinnerMode="dropdown"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            app:met_baseColor="@color/gray"
            app:met_errorColor="@color/red"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/blue"
            tools:checked="false"
            android:layout_marginTop="10dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    </ScrollView>
</androidx.cardview.widget.CardView>