<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DataUserFragment">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/data_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_fullNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                android:layout_marginTop="10dp"
                app:met_baseColor="@color/gray"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/blue"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                android:layout_marginTop="10dp"
                app:met_baseColor="@color/gray"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/blue"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_phoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                android:layout_marginTop="10dp"
                app:met_baseColor="@color/gray"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/blue"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_birthdayField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="date"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                android:layout_marginTop="10dp"
                app:met_baseColor="@color/gray"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/blue"
                app:met_singleLineEllipsis="true" />

            <Spinner
                android:id="@+id/sp_genderField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender"
                android:checked="false"
                android:spinnerMode="dropdown"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                app:met_baseColor="@color/gray"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/blue"
                tools:checked="false"
                android:layout_marginTop="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScrollView01">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_save"
            android:layout_width="180sp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/save"
            fbutton:shadowColor="@color/btnlightBlueDown"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            app:fButtonColor="@color/btnlightBlueUp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="3dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_cancel"
            android:layout_width="180sp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/cancel"
            app:fButtonColor="@color/btnlightBlueUp"
            fbutton:shadowColor="@color/btnlightBlueDown"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="3dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>