<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginPasswordFragment">

        <LinearLayout
            android:id="@+id/ll_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            tools:ignore="MissingConstraints">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/met_loginField"
                android:hint="@string/login"
                android:inputType="text"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"
                android:layout_marginTop="10dp"

                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/gray"
                app:met_primaryColor="@color/blue"
                app:met_errorColor="@color/red"
                app:met_singleLineEllipsis="true"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/met_passwordField"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/gray"
                app:met_primaryColor="@color/blue"
                app:met_errorColor="@color/red"
                app:met_singleLineEllipsis="true"
                />

        </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_password">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_save"
            android:layout_width="180sp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/save"
            fbutton:shadowColor="@color/btnlightBlueDown"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            app:fButtonColor="@color/btnlightBlueUp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="2dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_cancel"
            android:layout_width="180sp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/cancel"
            app:fButtonColor="@color/btnlightBlueUp"
            fbutton:shadowColor="@color/btnlightBlueDown"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="2dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>